--- a/hoast360.html
+++ b/hoast360.html
@@ -7,8 +7,8 @@
 		<link rel="shortcut icon" type="image/jpg" href="img/favicon.jpg"/>
 		<link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
 	  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-		<!-- <link href="https://vjs.zencdn.net/7.6.0/video-js.css" rel="stylesheet">
-		<link rel="stylesheet" type="text/css" href="hoast.css"> -->
+		<!-- <link href="https://vjs.zencdn.net/7.6.0/video-js.css" rel="stylesheet"> -->
+		<link rel="stylesheet" type="text/css" href="./css/hoast.css">
 	</head>
 	<body>
 
