opus working now, needed to include videojs-contrib-dash

--- a/hoast360.html
+++ b/hoast360.html
@@ -36,7 +36,7 @@
     <script src="./dist/hoast360.bundle.js"></script>
 		<script>
       $("#start1").click(function() {
-        hoast360.initialize("opustest/", 4);
+        hoast360.initialize("webm_media/2015_VokalTotal/", 4);
       });
       $("#start2").click(function() {
         hoast360.initialize("media/trelotechnika_ambix/", 3);
