with opus we dont need aac channel remapping

--- a/hoast360.html
+++ b/hoast360.html
@@ -39,7 +39,7 @@
         hoast360.initialize("webm_media/2015_VokalTotal/", 4);
       });
       $("#start2").click(function() {
-        hoast360.initialize("media/trelotechnika_ambix/", 3);
+        hoast360.initialize("webm_media/25ch_count/", 4);
       });
       $("#stop").click(function() {
         hoast360.stop();
