--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <!-- <script src="./dependencies/audioworklet-polyfill.js"></script> -->
 
     <button id="clickme">clickme</button>
+    <input type="range" min="-180" max="180" value="0" class="slider" id="azim">
+    <input type="range" min="-90" max="90" value="0" class="slider" id="elev">
 
     <script src="./dist/bundle.js" type="module"></script>
   </body>
