--- a/hoast360.html
+++ b/hoast360.html
@@ -36,10 +36,10 @@
     <script src="./dist/hoast360.bundle.js"></script>
 		<script>
       $("#start1").click(function() {
-        hoast360.initialize("opustest/", 3);
+        hoast360.initialize("opustest/dash/", 3);
       });
       $("#start2").click(function() {
-        hoast360.initialize("opustest/", 3);
+        hoast360.initialize("webm_media/2015_VokalTotal", 4);
       });
       $("#stop").click(function() {
         hoast360.stop();
