--- a/hoast360.html
+++ b/hoast360.html
@@ -39,7 +39,7 @@
         hoast360.initialize("opustest/dash/", 3);
       });
       $("#start2").click(function() {
-        hoast360.initialize("webm_media/hoast_demo", 4);
+        hoast360.initialize("webm_media/hoast_analyzer", 4);
       });
       $("#stop").click(function() {
         hoast360.stop();
