added player css to bundle and renamed index.js to hoast360.js

--- a/hoast360.html
+++ b/hoast360.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <!-- <link href="https://vjs.zencdn.net/7.6.0/video-js.css" rel="stylesheet"> -->
-    <link rel="stylesheet" type="text/css" href="./css/hoast.css">
+    <link rel="stylesheet" type="text/css" href="./css/website.css">
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8=" crossorigin="anonymous"></script>
