reset() instead of stop()

--- a/hoast360.html
+++ b/hoast360.html
@@ -43,7 +43,7 @@
             hoast360.initialize("media/hoast_demo_o4/", 4);
         });
         $("#stop").click(function () {
-            hoast360.stop();
+            hoast360.reset();
         })
     </script>
 </body>
