--- a/hoast360.html
+++ b/hoast360.html
@@ -37,10 +37,10 @@
     <script>
         var hoast360 = new HOAST360();
         $("#start1").click(function () {
-            hoast360.initialize("media/2015_VokalTotal_o4/", 4);
+            hoast360.initialize("media/2015_VokalTotal_o4/", "irs/", 4);
         });
         $("#start2").click(function () {
-            hoast360.initialize("media/hoast_demo_o4/", 4);
+            hoast360.initialize("media/hoast_demo_o4/", "irs/", 4);
         });
         $("#stop").click(function () {
             hoast360.reset();
