install packages from github

--- a/qualityselectortest.html
+++ b/qualityselectortest.html
@@ -15,20 +15,21 @@
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8=" crossorigin="anonymous"></script>
 
-    <script src="./dependencies/http-streaming-master/dist/videojs-http-streaming.js"></script>
-    <!-- <script src="http://cdn.dashjs.org/v3.1.0/dash.all.debug.js"></script> -->
-    <!-- <script src="./node_modules/videojs-contrib-dash/dist/videojs-dash.js"></script> -->
+    <!-- <script src="./dependencies/http-streaming-master/dist/videojs-http-streaming.js"></script> -->
+    <script src="http://cdn.dashjs.org/v3.1.0/dash.all.debug.js"></script>
+    <script src="./node_modules/videojs-contrib-dash/dist/videojs-dash.js"></script>
     <script src="./node_modules/videojs-contrib-quality-levels/dist/videojs-contrib-quality-levels.js"></script>
     <script src="./node_modules/videojs-http-source-selector/dist/videojs-http-source-selector.js"></script>
     <script src="./node_modules/videojs-xr/dist/videojs-xr.js"></script>
-    <link rel="stylesheet" type="text/css" href="./node_modules//videojs-http-source-selector/dist/videojs-http-source-selector.css">
+    <link rel="stylesheet" type="text/css"
+        href="./node_modules//videojs-http-source-selector/dist/videojs-http-source-selector.css">
 
 </head>
 
 <body>
 
-    <video-js id='videojs-player' controls preload='auto'
-        width='800' height='400' crossorigin="anonymous" data-setup='{}'>
+    <video-js id='videojs-player' controls preload='auto' width='800' height='400' crossorigin="anonymous"
+        data-setup='{}'>
         <p class='vjs-no-js'>
             To view this video please enable JavaScript, and consider upgrading to a web browser that
             <a href='https://videojs.com/html5-video-support/' target='_blank'>supports HTML5 video</a>
@@ -47,8 +48,8 @@
         // videoPlayer.qualityLevels();
         // videoPlayer.httpSourceSelector();
 
-        videoPlayer.src({ type: 'application/dash+xml', src: 'https://dash.akamaized.net/dash264/TestCasesVP9/vp9-hd/sintel-vp9-hd.mpd' });
-        
+        videoPlayer.src({ type: 'application/dash+xml', src: './media/2015_VokalTotal_dontworry_o4/video.mpd' });
+
     </script>
 
 
