--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         var hoast360 = new HOAST360();
 
         function init() {
-            hoast360.initialize("media/hoast_demo_o4/", "irs/", 4);
+            hoast360.initialize("media/hoast_demo_o4/", "", 4);
         }
 
         function stop() {
