back to irs folder

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         var hoast360 = new HOAST360();
 
         function init() {
-            hoast360.initialize("media/hoast_demo_o4/", "https://thomasdeppisch.github.io/hoast360/", 4);
+            hoast360.initialize("media/hoast_demo_o4/", "https://thomasdeppisch.github.io/hoast360/irs/", 4);
         }
 
         function stop() {
